# sre-portfolio

./: .gitignore  .tool-versions  Dockerfile.book-library  README.md  Tiltfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflow/: packer.yaml
.github/workflows/: codeql-analysis.yml  golang-book-library-push.yml  golang-book-library-test.yml  golang-book-library.yml  greet.yaml  matrix-conditional.yml  packer.yml
.trunk/: trunk.yaml
ansible/: developer-playbook.yml  user-playbook.yml  workstation-playbook.yml
ansible/files/: id_rsa-remote-ssh.pub
app/service/: Makefile  README.md  pyproject.toml  run.py
app/service/tests/: test_app.py  test_publisher.py  test_report.py  test_tracker.py
app/service/tracker/: __init__.py  app.py  (+1 more)
apps/literature/: README.md  pyproject.toml
apps/literature/orders/: __init__.py  app.py  main.py  seed.py
apps/literature/tests/: test_orders.py
apps/service/: pyproject.toml
apps/service/src/: run.py
apps/service/src/service/: __init__.py  app.py  config.py
apps/service/src/service/models/: publisher.py  report.py
booking/: main.go
golang/book-library/: README.md  book_mgmt.go  book_mgmt_test.go  go.mod  go.sum  main.go  main_test.go
golang/booking/: README.md  main.go
k8s/: init-k3d.sh
k8s/admin/: namespace-limits-deployment.yaml  namespace-limits-pod.yaml  namespace-limits.yaml  namespace-quotas.yaml
packer/centos/: README.md  centos8.pkr.hcl  variables.auto.pkrvars.hcl  variables.pkr.hcl
vagrant/developer/: README.md  Vagrantfile
vagrant/workstation/: README.md  Vagrantfile
(+57 files in other folders)
