[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["Alquin Gayle <26052969+adgayle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
