[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Alquin Gayle <26052969+adgayle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Script = "^2.0.6"
marshmallow = "^3.14.1"
Flask-Bcrypt = "^0.7.1"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
